<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wallet_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wallet_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:entries="@array/transaction_types"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_name_text_view" />

        <TextView
            android:id="@+id/wallet_currency_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_name_edit_text" />

        <Spinner
            android:id="@+id/wallet_currency_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:entries="@array/currencies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_currency_text_view" />

        <TextView
            android:id="@+id/wallet_initial_balance_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/initial_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_currency_spinner" />

        <EditText
            android:id="@+id/wallet_initial_balance_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_initial_balance_text_view" />


        <TextView
            android:id="@+id/wallet_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_initial_balance_edit_text" />

        <Spinner
            android:id="@+id/wallet_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:entries="@array/wallet_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_type_text_view" />

        <Button
            android:id="@+id/add_wallet_button"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_type_spinner" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>