<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:title="@string/balance" />
        <item
            android:id="@+id/nav_template"
            android:title="@string/templates" />
        <item
            android:id="@+id/nav_info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>
</menu>
