<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_wallet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_20"
        android:text="@string/add_wallet"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wipe_data_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_20"
        android:text="@string/wipe_data"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</LinearLayout>